--- a/index.html
+++ b/index.html
@@ -344,14 +344,14 @@ position: relative;
 <br><br><center><div id="update" style="background-image:url(https://i.imgur.com/HgFke6Y.png); border: 1px; padding: 10px; overflow: auto; color: #BC9F9F; width: 172px;height: 100px; text-align: justify; font-family: Verdana; font-size:7px; line-height: 100%">
 <center><img src="https://i.imgur.com/bwAaPW7.gif"></center>
 <br><br>
+03/29 <img src="https://i.imgur.com/y9S1bJ8.gif"> status on: <font color="#DFB7B7">status page</font><br>
+03/29 <img src="https://i.imgur.com/y9S1bJ8.gif"> look idea on: <font color="#DFB7B7">look book</font><br>
+03/27 <img src="https://i.imgur.com/y9S1bJ8.gif"> musics on: <font color="#DFB7B7">potetomid music</font><br>
 03/15 <img src="https://i.imgur.com/y9S1bJ8.gif"> post on: <font color="#DFB7B7">news blog</font><br>
 03/15 <img src="https://i.imgur.com/y9S1bJ8.gif"> stuff on: <font color="#DFB7B7">portfolio</font><br>
 03/14 <img src="https://i.imgur.com/y9S1bJ8.gif"> status on: <font color="#DFB7B7">status page</font><br>
 03/14 <img src="https://i.imgur.com/y9S1bJ8.gif"> musics on: <font color="#DFB7B7">potetomid music</font><br>
-03/09 <img src="https://i.imgur.com/y9S1bJ8.gif"> look on: <font color="#DFB7B7">look book</font><br>
-03/09 <img src="https://i.imgur.com/y9S1bJ8.gif"> text on: <font color="#DFB7B7">tiny journal</font><br>
-03/02 <img src="https://i.imgur.com/y9S1bJ8.gif"> draw on: <font color="#DFB7B7">fairy loli</font><br>
-03/02 <img src="https://i.imgur.com/y9S1bJ8.gif"> stuff on: <font color="#DFB7B7">portfolio</font><br>
+03/09 <img src="https://i.imgur.com/y9S1bJ8.gif"> look idea on: <font color="#DFB7B7">look book</font><br>
 </div></center>
 
 <br>
@@ -364,7 +364,7 @@ position: relative;
     border-radius: 20px; outline:none; padding:2px; padding-left:3px; padding-right:3px; background-image:url(https://i.imgur.com/4pQ4HlC.png); font-size:8px; font-family:Verdana; COLOR: #a58282"><a href="http://middlepot.com/"><img src="https://i.imgur.com/SS3uOVJ.png"></a></textarea>
 <br><br><br>
 
-<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#9e8787"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#9e8787"> 2018 . march . 15</font></font></font>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#9e8787"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#9e8787"> 2018 . march . 29</font></font></font>
 <br>
 <br><br>
 <br><br>
