--- a/puporipot.html
+++ b/puporipot.html
@@ -460,12 +460,11 @@ function getPosition(el) {
 <sub><sub><img src="https://i.imgur.com/m77Uy0D.gif"/></sub></sub>　<font color="#c6afaf">puporipot</font>　<sub><sub><img src="https://i.imgur.com/m77Uy0D.gif"/></sub></sub>
 <br><br><br></center>
 <font style="font-size: 8px;" color="#ccb1b1">
-this may confuse you a little bit , try to keep an open mind, okay ?<br>
-it's super weird and maybe don't have any sense, i don't really know.<br>
+i still have to think of some things about it. try to keep an open mind, okay ?<br>
+maybe it didn't have any sense, i don't really know.<br>
 this area is still unknown, because no one was allowed a connection between these worlds, it just happened.<br>
-it's kind of difficult to explain, so you need to put yourself in the shoes of someone who doesn't know how they got there.<br>
-please don't be offended, since this is not literally you, of course.<br>
-there are some draws, stories, music and some animations someday.<br>
+this is the other side.<br>
+there are some draws, stories, music and some animations in the future.<br>
 for now you don't have much to do, but :<br>
 if you search for soundtracks, i suggest you go to the sky.<br>
 if you search for ambient music, i suggest you go toward the ground.<br>
@@ -473,30 +472,11 @@ if you search for instrumental melodies, i suggest you go to the underground.<br
 can you find something nice ?
 </font><br><br><br><br>
 <center>
-<font color="#bf9e9e">scroll scroll</font></center>
-<br><br><br>
-<center>
 
-<img height="auto" width="400" src="http://i.imgur.com/z0J6YYp.png"/>
-<br>
-<img height="auto" width="400" src="http://i.imgur.com/4DaRUJh.png"/>
-<br>
-<img height="auto" width="400" src="http://i.imgur.com/NuLJp7g.png"/>
-<br>
-<img height="auto" width="400" src="http://i.imgur.com/wTSJqZR.png"/>
-<br>
-<img height="auto" width="400" src="http://i.imgur.com/vznKXDa.png"/>
-<br>
-<img height="auto" width="400" src="http://i.imgur.com/5kA7zxg.png"/>
-<br>
-<img height="auto" width="400" src="http://i.imgur.com/opqcCk8.png"/>
-<br>
-<img height="auto" width="400" src="http://i.imgur.com/OezwQZO.png"/>
-<br>
-<img height="auto" width="400" src="http://i.imgur.com/9EBraBe.png"/>
-<br>
-<img height="auto" width="400" src="http://i.imgur.com/vjmg7hl.png"/>
-<br>
+<a title="oop"><img src="https://i.imgur.com/IuTfl4v.png"/></a>　<a title="oon"><img src="https://i.imgur.com/vurwIF1.png"/></a>
+<br><br><a title="oof"><img src="https://i.imgur.com/mpqLDCF.png"/></a>　<a title="oob"><img src="https://i.imgur.com/jOSQufw.png"/></a>
+<br><br><a title="oox"><img src="https://i.imgur.com/0IpOsqv.png"/></a>　<a title="ook"><img src="https://i.imgur.com/K6IKzNw.png"/></a>
+<br><br><a title="u"><img src="https://i.imgur.com/tjnSJg5.png"/></a></center>
 <br><br><br>
 <br><br>
 
