--- a/blog.html
+++ b/blog.html
@@ -425,7 +425,7 @@ i... also have something very personal here that i was soooooo embarrassed to po
 i'm sorry for the audio quality, and i'm talking in a low voice, so... well, i hope it's not too bad to listen ;///;<br>
 <br><br>
 
-<center><a href="https://a.tumblr.com/tumblr_p7g5l5cPzB1u967r3o1.mp3" id="linkbjinho" target="_blank">hi .mp3</a></center>
+<center><a href="https://files.catbox.moe/1xcwqr.mp3" id="linkbjinho" target="_blank">hi .mp3</a></center>
 </font></font></font>
 <br>
 <center>
