--- a/credits.html
+++ b/credits.html
@@ -489,7 +489,7 @@ moveupvar=setTimeout("moveup()",20)
 <font family = "Verdana"><font color="#AD9F97"><font size="2">hosting sites that i currently use :</font></font></font><br><br>
 <font family = "Verdana"><font color="#BAA99F"><font size="1">
 　　　server : github<br>
-　　　mp3 : tumblr & catbox.moe<br>
+　　　mp3 : catbox.moe<br>
 　　　webm : catbox.moe<br>
 　　　image : imgur<br>
 　　　folder : google photos<br>
