--- a/moep.html
+++ b/moep.html
@@ -497,11 +497,11 @@ let's get to know them with this quick introduction :
 </div><br>
 <div style="font-size: 10px;">
 <font face="verdana">
-<font face="verdana" color="#D7C7D3">⁽ ³ ⁺ ⁴ ⁾</font> <a title="#mlp:fim #max steroid" href="https://a.tumblr.com/tumblr_p5n806Zi0z1u967r3o1.mp3" id="link1" target="_blank">so, what do you think ? .mp3</a><br>
+<font face="verdana" color="#D7C7D3">⁽ ³ ⁺ ⁴ ⁾</font> <a title="#mlp:fim #max steroid" href="https://files.catbox.moe/cad76r.mp3" id="link1" target="_blank">so, what do you think ? .mp3</a><br>
 <br>
-<font face="verdana" color="#EEB3B3">⁽ ³ ⁺ ¹ ⁾</font> <a title="#mlp:fim #sota fujimori" href="https://a.tumblr.com/tumblr_p5n7v6hHOD1u967r3o1.mp3" id="link2" target="_blank">U・ω・ROCK .mp3</a><br>
+<font face="verdana" color="#EEB3B3">⁽ ³ ⁺ ¹ ⁾</font> <a title="#mlp:fim #sota fujimori" href="https://files.catbox.moe/7bxbu0.mp3" id="link2" target="_blank">U・ω・ROCK .mp3</a><br>
 <br>
-<font face="verdana" color="#CCCCDA">⁽ ³ ⁺ ⁴ ⁾</font> <a title="#diskowarp #sota fujimori" href="https://a.tumblr.com/tumblr_p5n82rwFDl1u967r3o1.mp3" id="link3" target="_blank">Lolitabot's Great Trip .mp3</a>
+<font face="verdana" color="#CCCCDA">⁽ ³ ⁺ ⁴ ⁾</font> <a title="#diskowarp #sota fujimori" href="https://files.catbox.moe/odxwd1.mp3" id="link3" target="_blank">Lolitabot's Great Trip .mp3</a>
 </font>
 </div>
 <br><br>
