--- a/puporipot.html
+++ b/puporipot.html
@@ -338,7 +338,7 @@ position: relative;
 <div id="stuff">
 
 <audio id="musict" preload="true">
-  <source src="https://files.catbox.moe/i4iy4x.mp3" type="audio/mpeg">
+  <source src="https://files.catbox.moe/2uaqjo.mp3" type="audio/mpeg">
 </audio>
 <div id="audioplayer">
  <button id="pButton" class="play"></button>
@@ -492,18 +492,18 @@ can you find something nice ?
 </div>
 <div style="font-size: 9px;">
 <font face="verdana">
-<a href="https://a.tumblr.com/tumblr_oz4kvlu0DH1u967r3o1.mp3" id="link1" target="_blank">softly sad .mp3</a>
+<a href="https://files.catbox.moe/355kmv.mp3" id="link1" target="_blank">softly sad .mp3</a>
 <br>
 <font face="verdana">
-<a href="https://a.tumblr.com/tumblr_o991ehrEvo1u967r3o1.mp3" id="link1" target="_blank">deers funeral .mp3</a>
+<a href="https://files.catbox.moe/xmkszz.mp3" id="link1" target="_blank">deers funeral .mp3</a>
 <br>
-<a href="https://a.tumblr.com/tumblr_o991fxz3551u967r3o1.mp3" id="link1" target="_blank">happy life .mp3</a>
+<a href="https://files.catbox.moe/bua3oy.mp3" id="link1" target="_blank">happy life .mp3</a>
 <br>
-<a href="https://a.tumblr.com/tumblr_o99g1m3znW1u967r3o1.mp3" id="link1" target="_blank">sad cake .mp3</a>
+<a href="https://files.catbox.moe/1sf84o.mp3" id="link1" target="_blank">sad cake .mp3</a>
 <br>
-<a href="https://a.tumblr.com/tumblr_okcvwoVnWL1u967r3o1.mp3" id="link1" target="_blank">fairy stuff .mp3</a>
+<a href="https://files.catbox.moe/2kniki.mp3" id="link1" target="_blank">fairy stuff .mp3</a>
 <br>
-<a href="https://a.tumblr.com/tumblr_okcvxlEz7X1u967r3o1.mp3" id="link1" target="_blank">the end .mp3</a>
+<a href="https://files.catbox.moe/l78ffz.mp3" id="link1" target="_blank">the end .mp3</a>
 </font>
 </div>
 <br><br>
@@ -515,11 +515,11 @@ can you find something nice ?
 </div>
 <div style="font-size: 9px;">
 <font face="verdana">
-<a href="https://a.tumblr.com/tumblr_o99047a4mC1u967r3o1.mp3" id="link2" target="_blank">light package .mp3</a>
+<a href="https://files.catbox.moe/2uaqjo.mp3" id="link2" target="_blank">light package .mp3</a>
 <br>
-<a href="https://a.tumblr.com/tumblr_o9906f1AjZ1u967r3o1.mp3" id="link2" target="_blank">magic water .mp3</a>
+<a href="https://files.catbox.moe/2e1jim.mp3" id="link2" target="_blank">magic water .mp3</a>
 <br>
-<a href="https://a.tumblr.com/tumblr_okcvvqVPru1u967r3o1.mp3" id="link2" target="_blank">​silence bells .mp3</a>
+<a href="https://files.catbox.moe/d2r5n1.mp3" id="link2" target="_blank">​silence bells .mp3</a>
 </font>
 </div>
 <br><br>
@@ -531,7 +531,7 @@ can you find something nice ?
 </div>
 <div style="font-size: 9px;">
 <font face="verdana">
-<a href="https://a.tumblr.com/tumblr_okcw0hTBii1u967r3o1.mp3" id="link3" target="_blank">tic tac .mp3</a>
+<a href="https://files.catbox.moe/kpj9uy.mp3" id="link3" target="_blank">tic tac .mp3</a>
 </font>
 </div>
 </center>
