--- a/archive.html
+++ b/archive.html
@@ -402,7 +402,7 @@ i'm very shy, so i didn't show to many people besides them and it ended up getti
 <br>
 <br><br>
 
-<center><a href="https://a.tumblr.com/tumblr_p4xjg5oG8S1u967r3o1.mp3" id="linkbjinho" target="_blank">secret base .mp3</a></center>
+<center><a href="https://files.catbox.moe/l8kn8o.mp3" id="linkbjinho" target="_blank">secret base .mp3</a></center>
 </font></font></font>
 <br>
 <center>
@@ -1048,7 +1048,7 @@ i just wanted to say this to keep you informed <img src="https://i.imgur.com/Xi8
 as i said in the last post, this post will be very special, so i have here also a piano composition :<br>
 <br><br>
 
-<center><a href="https://a.tumblr.com/tumblr_oz4kv2rWLx1u967r3o1.mp3" id="linkbjinho" target="_blank">angelolatry .mp3</a></center>
+<center><a href="https://files.catbox.moe/s91czy.mp3" id="linkbjinho" target="_blank">angelolatry .mp3</a></center>
 </font></font></font>
 <br>
 <center>
@@ -1769,7 +1769,7 @@ and, in a small moment of inspiration, i did a little melody :<br>
 <br>
 <br><br>
 
-<center><a href="https://a.tumblr.com/tumblr_owypytwdA21u967r3o1.mp3" id="linkbjinho" target="_blank">littlegirl .mp3</a></center>
+<center><a href="https://files.catbox.moe/43xa8t.mp3" id="linkbjinho" target="_blank">little girl .mp3</a></center>
 </font></font></font>
 <br>
 <center>
@@ -1873,7 +1873,7 @@ hmm, i'll be here probably once a week ? i like to have a week routine and i wou
 so, here is a very short song that i didn't do recently, but i suddenly found on my things, and i'm so happy because i thought i had lost it forever !!<br>
 <br><br>
 
-<center><a href="https://a.tumblr.com/tumblr_owcmjwt10g1u967r3o1.mp3" id="linkbjinho" target="_blank">forbidden .mp3</a></center>
+<center><a href="https://files.catbox.moe/i06o5b.mp3" id="linkbjinho" target="_blank">forbidden .mp3</a></center>
 </font></font></font>
 <br>
 <center>
