--- a/status.html
+++ b/status.html
@@ -397,6 +397,26 @@ p { margin: 0; }
 
 <!-- STAAAAAAAAAAAAAAAAAAAAATUSSSSSSSSSSSSSSSSSSSSSSSSSS -->
 <div style="text-align: left;"><br><br>
+　<img src="http://i.imgur.com/lOSrsvD.gif"> <font color="#624646">04.26.18</font>
+<body>
+<div style="float: right;">
+<style>
+yay { cursor: pointer; }
+</style>
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_s2941852109055_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090255_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1z2myiqJk475GXK1QLSmW1V-CH9uzQZme"></script>
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_s2941852109255_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092355_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1Mqdykr4SY2ERKJYQXEcXrp113c9FNvhy"></script>
+</font></font>
+</div>
+</body>
+
+<br><br>
+　　<font color="#815B5B">i will do my best, always !!!</font>
+<br><br>
+<div style="text-align: left;"><br><br>
 　<img src="http://i.imgur.com/lOSrsvD.gif"> <font color="#624646">04.19.18</font>
 <body>
 <div style="float: right;">
@@ -575,26 +595,6 @@ yay { cursor: pointer; }
 
 <br><br>
 　　<font color="#815B5B">♡ i am truly & absolutely in love ♡</font>
-<br><br><br>
-<div style="text-align: left;"><br><br>
-　<img src="http://i.imgur.com/lOSrsvD.gif"> <font color="#624646">01.03.18</font>
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109055_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090255_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1z2myiqJk475GXK1QLSmW1V-CH9uzQZme"></script>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109255_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092355_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1Mqdykr4SY2ERKJYQXEcXrp113c9FNvhy"></script>
-</font></font>
-</div>
-</body>
-
-<br><br>
-　　<font color="#815B5B">i hope this year to be the best year possible for us ♡ ♡ ♡</font>
 <br><br>
 <!-- STAAAAAAAAAAAAAAAAAAAAATUSSSSSSSSSSSSSSSSSSSSSSSSSS -->
 
