--- a/faq.html
+++ b/faq.html
@@ -467,9 +467,8 @@ the only way to keep a kink safe and not harmful to anyone is without public exp
 before i finish here, i'd like to say something quick about melanie martinez. everyone knows that there is a direct connection with her and the children's exposure to the famous "daddy kink".<br>
 first of all, i would like to say that i particularly really like her instrumentals. but, i think her videos and lyrics a bit... dangerous. some of them are ok, but her most famous songs deal with trauma issues in a not very respectful way, and that really bothers me. i feel uncomfortable about it.<br>
 i don't know if she's personally into a kink, and i've never seen her directly exposing kinks to children, so i'm not "against her".<br>
-however, i know she's friend of <a title="
-[ yungelita
- ]" id="linkbjinho">a person</a> who is completely disrespectful to children, who sexualises child abuse, necrophilia, suicide and many other things. i have nothing against melanie in particular, at least for today, but i think she shouldn't have contact with such toxic people.<br>
+however, i know she's friend of <a title="[ yungelita ]" id="linkbjinho">a person</a> who is completely disrespectful to children, who sexualises child abuse, necrophilia, suicide and many other things. <s>i have nothing against melanie in particular, at least for today, but</s> i think she shouldn't have contact with such toxic people.<br>
+<b>edit //</b> i do have something against melanie now, she is confirmed to be really toxic too and i do not support her at all. i still like the instrumentals, though ; ;<br>
 <br>
 <br>
 i hope i have made things clear, since this subject is so controversial, it's difficult to write about it<br>
