--- a/faq.html
+++ b/faq.html
@@ -348,7 +348,7 @@ position: relative;
 <br><br><br>
 
 <a href="#tumblr"><font color="#d8b6b6">info about my tumblr</font></a><font color="#aa8f8f"> | </font><a href="#rules"><font color="#d8b6b6">chat rules</font></a><font color="#aa8f8f"> | </font><a href="#dx"><font color="#d8b6b6">about self dx</font></a><font color="#aa8f8f"> | </font><a href="#agere"><font color="#d8b6b6">about agere &
- communities</font></a><font color="#aa8f8f"> | </font><a href="#words"><font color="#d8b6b6">about controversial words</font></a><font color="#aa8f8f"> | </font><a href="#internet"><font color="#d8b6b6">my internet past</font></a><font color="#aa8f8f"> | </font><a href="#pics"><font color="#d8b6b6">about disliking pics</font></a><font color="#aa8f8f"> | </font><a href="#cc"><font color="#d8b6b6">ccs, ids & kins</font></a><font color="#aa8f8f"> | </font><a href="#gxb"><font color="#d8b6b6">about girls x boys</font></a><font color="#aa8f8f"> | </font><a href="#ywot"><font color="#d8b6b6">ywot advice</font></a><font color="#aa8f8f"> | </font><a href="#astro"><font color="#d8b6b6">about astrology & similar</font></a><font color="#aa8f8f"> | </font><a href="#beauty"><font color="#d8b6b6">some beauty talk</font></a><font color="#aa8f8f"> | </font><a href="#fashion"><font color="#d8b6b6">some fashion talk</font></a><font color="#aa8f8f"> | </font><a href="#sexuality"><font color="#d8b6b6">about sexuality</font></a><font color="#aa8f8f"> | </font><a href="#personality"><font color="#d8b6b6">my personality</font></a>
+ communities</font></a><font color="#aa8f8f"> | </font><a href="#words"><font color="#d8b6b6">about controversial words</font></a><font color="#aa8f8f"> | </font><a href="#internet"><font color="#d8b6b6">my internet past</font></a><font color="#aa8f8f"> | </font><a href="#pics"><font color="#d8b6b6">about disliking pics</font></a><font color="#aa8f8f"> | </font><a href="#cc"><font color="#d8b6b6">ccs, ids & kins</font></a><font color="#aa8f8f"> | </font><a href="#gxb"><font color="#d8b6b6">about girls x boys</font></a><font color="#aa8f8f"> | </font><a href="#ywot"><font color="#d8b6b6">ywot advice</font></a><font color="#aa8f8f"> | </font><a href="#astro"><font color="#d8b6b6">about astrology & similar</font></a><font color="#aa8f8f"> | </font><a href="#beauty"><font color="#d8b6b6">some beauty talk</font></a><font color="#aa8f8f"> | </font><a href="#fashion"><font color="#d8b6b6">some fashion talk</font></a><font color="#aa8f8f"> | </font><a href="#sexuality"><font color="#d8b6b6">about sexuality</font></a><font color="#aa8f8f"> | </font><a href="#myself"><font color="#d8b6b6">about myself</font></a><font color="#aa8f8f"> | </font><a href="#purity"><font color="#d8b6b6">purity & innocence</font></a>
 <br>
 <br><br>
 <font color="#d1b9b1"><font size="2">※</font> there will be updates and new topics from time to time</font>
@@ -1256,9 +1256,9 @@ i really hope my words are easy to understand !<br>
 <br><br><br><br><br><br>
 </font>
 
-<a name="personality" id="personality"></a>
+<a name="myself" id="myself"></a>
 <sub><sub><img src="https://i.imgur.com/xuXKSIc.gif"></sub></sub><font color="#c4afa8">　who am i ?</font><br><br><br>
-<font color="#d8b9af">　( april . 19 . 2018 )</font>
+<font color="#d8b9af">　( april . 19 . 2018 + may . 04 . 2018 )</font>
 <br><br>
 <font color="#B1A69E">
 　　　　　𝓅𝓮𝓇𝓈𝓸𝓃𝒶𝓁𝒾𝓉𝓎 𝓉𝓇𝒶𝒾𝓉𝓈 :<br>
@@ -1283,6 +1283,34 @@ i really hope my words are easy to understand !<br>
 ❀　people say i smell like vanilla. i think i smell like honey ///<br>
 ❀　i love animals, especially babies, i love taking care of babies ♡ !!!<br>
 ❀　i love nature, she is everything to me, i struggle daily to feel part of her and understand my instincts and role in life. this has made me extremely happy and helps me overcome any personal problems.<br>
+<br><br><br>
+<b>edit //</b> some people asked me to post some things about my body as well. i thought a lot about it because it's very intimate and i don't like to post so many things like that ...<br>
+but i decided that i'll post, since these are information that anyone who knows me personally would know, there is nothing so secret about it :<br>
+<br>
+✂　my height is 5,5. average, i guess ?<br>
+✂　i weight 117 lbs. i think i'm skinny, but not super skinny, i'm okay.<br>
+✂　i don't want to share measurements here, but i really like my body shape ! according to my measures, i'm hourglass figure.<br>
+✂　my skin is pale, but not super pale. i hate tanning because my skin is really sensitive and turns red only ; ;<br>
+✂　my hair changes color very much according to the lighting, but it also becomes clearer if i go out in the sun. it's dark blond / light brown and sometimes it gets a little bit orange, but it's only noticeable in the sunlight.<br>
+✂　my eyes are between blue and green ( cyan, turquoise ) + a little bit grayish.<br>
+✂　i don't know my shoe size to be honest, but my feet are 24cm.<br>
+✂　um... i'm a-cup ;////;<br>
+<br><br><br><br><br><br>
+</font>
+
+<a name="purity" id="purity"></a>
+<sub><sub><img src="https://i.imgur.com/xuXKSIc.gif"></sub></sub><font color="#c4afa8">　what is purity & innocence ?</font><br><br><br>
+<font color="#d8b9af">　( may . 04 . 2018 )</font>
+<br><br>
+<font color="#B1A69E">
+i would like to talk about these two adjectives that are so confusing to people : pure & innocent.<br>
+these are actually extremely important things, but are treated as something far, almost impossible to achieve. and that's not true, because it's something we can all go back to.<br>
+to explain it better, let's define purity and innocence :<br>
+purity, as i have already commented in other posts, is something that you are when you're being yourself. when you act naturally and follow your heart, when you do not listen to what others think is good for you, but what your heart says is best for you. your heart wants you to have a clear conscience, want you to stay safe and healthy, wants you to be happy. it's not always the easiest path, but it's always the right one, the pure one. purity is literally not be contaminated by external influences. it's hard because we live in society and we need to please others, but it doesn't mean that you need to change who you are ( not even a little bit ) to be a nice person, and be happy.<br>
+innocence is something that people often confuse with ignorance. when you don't know things by choice, you are being ignorant, which is a bad quality. innocence is when you see the world in a beautiful way, when you believe in your dreams, believe things can get better, do not judge others before you know, when even after being bitten by a dog, do not you think all dogs are evil. so, innocence is more linked to positivity, it's a quality of being radiant and full of love, even having gone through difficult things, or not. of course it's easier to be positive when you don't have traumas to deal with, but that's not the point. it is possible, and it is necessary for you to be happy !<br>
+children are pure and innocent because they have not been "contaminated" by society's pressure to be different from who they really are, to give up their dreams, to think the world and people are bad and it's always getting worse. this is not right and it's not true. it's a super toxic thought.<br>
+other ( nonhuman ) animals are like children forever, for at least none of them still live in society like humans. society itself is not a problem, but people just don't have the maturity to deal with it in a healthy way. it's something that people should educate themselves and educate their children so that we can all be happier !!<br>
+never think that you have no hope, that you are dirty or rotten, that your dreams can't come true, that magic doesn't exist. erase it forever from your life !!! learning to evaluating your behavior and the way you see the world is very important to becoming a better and more satisfied person. believe in your dreams, make the little you from the past proud of who you became today ♡ !<br>
 <br><br><br><br>
 </font>
 
