--- a/archive.html
+++ b/archive.html
@@ -350,6 +350,155 @@ overflow-x:hidden;
 font-family: Verdana;">
 
 <br>
+<center><img src="https://i.imgur.com/F97pcLP.gif"/></center>
+<br><br>
+<font size = 1><font color="#CBBBB1">
+<center>march . 15 . 2018</center>
+</font></font></font>
+<font size = 1><font color="#B1A69E">
+<br>
+hiiii fluffies <img src="https://i.imgur.com/ZqlLhvz.gif"/><br>
+the rain doesn't stop, day in day out .. it's starting to get boring, honestly.<br>
+i'm reading a lot about gardening these days <img src="https://i.imgur.com/kg945C0.gif"/><br>
+i've had a lot of trouble because the super humid weather of the season is making them bad ; ;<br>
+if you have any suggestions, i would appreciate it !!<br>
+<br>
+i don't know if i already told you, but i'm right-handed.<br>
+since i was little i always wanted to be ambidextrous, because it seems to be an incredible and useful ability !<br>
+i've always been too lazy to start practicing, but now i'm really training my left hand, and it has not been that hard. writing is the hardest part <img src="https://i.imgur.com/Ya4MhRH.gif"/><br>
+taking advantage of my interest in calligraphy, i'm training every day and it's been a lot of fun, i'm improving fast !!<br>
+i feel even sorry for having underestimated my left hand all this time ///<br>
+( oh i also have trained my sleep, sleeping and waking up every day at the same time. it was always hard for me, but bubu is encouraging me and i'm doing very well <img src="https://i.imgur.com/Nl03Rvi.gif"/> )<br>
+by the way, i would like to show you something super nice that i made :<br>
+<img src="https://i.imgur.com/HPfgN41.gif"/> fonts with my handwriting <img src="https://i.imgur.com/HPfgN41.gif"/><br>
+i really really liked the result, even if the "puf" one has got some spacing problems .. i think it's still ok !<br>
+the "bby" font is only hiragana & katakana. i made it based on the fact that i use a lot of kanas, and this is pretty childish, but kanjis are so haaard ;///;<br>
+well, i hope you like it !<br>
+<br><br>
+
+<center><a href="https://mega.nz/#!h4g3CK5Y!TEKXFSj7VQRduspCnP5D5eeD125QiTHpOYnbvMbX7GU" target="_blank"><img src="https://i.imgur.com/NCMnAEl.png"/></a></center>
+<br><br>
+<center><a href="https://mega.nz/#!cpQmHLJS!iMS2lWCLepuHFpjG-TPHTzUaFV5aw1G-jmep3gocPng" target="_blank"><img src="https://i.imgur.com/B2VF9hr.png"/></a></center>
+<br><br>
+<center><a href="https://mega.nz/#!goonkBiA!GfrdP7ywSNGSFTuNajH8r1fXBd2ObPJi4Q5WLsNZy2g" target="_blank"><img src="https://i.imgur.com/kfEIRhD.png"/></a></center>
+
+<br><br>
+<br>
+<center>
+<body>
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/omE4Ax3.gif"/>&nbsp;&nbsp; { &nbsp;1126&nbsp; } &nbsp;
+</font></font>
+</div>
+</body>
+<body>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/SJEUa0i.gif"/>&nbsp;&nbsp; { &nbsp;1&nbsp; } &nbsp;
+</font></font>
+</div>
+</body></center>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+and i also have here some pixel art !<br>
+these are simple, but i quite liked it. household stuff are always pretty cute <img src="https://i.imgur.com/GvUfyFc.gif"/><br>
+<br>
+<br><br>
+<center><a href="https://i.imgur.com/fjKXp8L.gif" target="_blank"><img src="https://i.imgur.com/fjKXp8L.gif"/></a><a href="https://i.imgur.com/fjKXp8L.gif" target="_blank"><img src="https://i.imgur.com/fjKXp8L.gif"/></a><a href="https://i.imgur.com/fjKXp8L.gif" target="_blank"><img src="https://i.imgur.com/fjKXp8L.gif"/></a></center><br><br>
+<center><img src="https://i.imgur.com/GZwT2by.gif"/></center><br><br>
+<center><a href="https://i.imgur.com/uJh1Orm.gif" target="_blank"><img src="https://i.imgur.com/uJh1Orm.gif"/></a><a href="https://i.imgur.com/uJh1Orm.gif" target="_blank"><img src="https://i.imgur.com/uJh1Orm.gif"/></a><a href="https://i.imgur.com/uJh1Orm.gif" target="_blank"><img src="https://i.imgur.com/uJh1Orm.gif"/></a><a href="https://i.imgur.com/uJh1Orm.gif" target="_blank"><img src="https://i.imgur.com/uJh1Orm.gif"/></a><a href="https://i.imgur.com/uJh1Orm.gif" target="_blank"><img src="https://i.imgur.com/uJh1Orm.gif"/></a><a href="https://i.imgur.com/uJh1Orm.gif" target="_blank"><img src="https://i.imgur.com/uJh1Orm.gif"/></a><a href="https://i.imgur.com/uJh1Orm.gif" target="_blank"><img src="https://i.imgur.com/uJh1Orm.gif"/></a><a href="https://i.imgur.com/uJh1Orm.gif" target="_blank"><img src="https://i.imgur.com/uJh1Orm.gif"/></a><a href="https://i.imgur.com/uJh1Orm.gif" target="_blank"><img src="https://i.imgur.com/uJh1Orm.gif"/></a></center><br><br>
+<center><img src="https://i.imgur.com/YEozFGn.gif"/></center><br><br>
+<center><a href="https://i.imgur.com/5ENsW7F.gif" target="_blank"><img src="https://i.imgur.com/5ENsW7F.gif"/></a><a href="https://i.imgur.com/5ENsW7F.gif" target="_blank"><img src="https://i.imgur.com/5ENsW7F.gif"/></a><a href="https://i.imgur.com/5ENsW7F.gif" target="_blank"><img src="https://i.imgur.com/5ENsW7F.gif"/></a><a href="https://i.imgur.com/5ENsW7F.gif" target="_blank"><img src="https://i.imgur.com/5ENsW7F.gif"/></a><a href="https://i.imgur.com/5ENsW7F.gif" target="_blank"><img src="https://i.imgur.com/5ENsW7F.gif"/></a><a href="https://i.imgur.com/5ENsW7F.gif" target="_blank"><img src="https://i.imgur.com/5ENsW7F.gif"/></a><a href="https://i.imgur.com/5ENsW7F.gif" target="_blank"><img src="https://i.imgur.com/5ENsW7F.gif"/></a><a href="https://i.imgur.com/5ENsW7F.gif" target="_blank"><img src="https://i.imgur.com/5ENsW7F.gif"/></a><a href="https://i.imgur.com/5ENsW7F.gif" target="_blank"><img src="https://i.imgur.com/5ENsW7F.gif"/></a></center>
+<br><br>
+</font></font></font>
+<br>
+<center>
+<body>
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/kfD2kLD.gif"/>&nbsp;&nbsp; { &nbsp;1124&nbsp; } &nbsp;
+</font></font>
+</div>
+</body>
+<body>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/ft0nNbC.gif"/>&nbsp;&nbsp; { &nbsp;0&nbsp; } &nbsp;
+</font></font>
+</div>
+</body></center>
+
+<font size = 1><font color="#B1A69E">
+<br><br>
+( the dividers can be clicked and saved )<br>
+<br>
+so, today the q&a subject will be lighter, as i intend to bring something controversial in the next post LOL<br>
+it's something that i really wanted to talk about, because you ask a lot about it !<br>
+<br><br>
+<center><img src="http://i.imgur.com/d81T42M.gif"/>　<b>q & a</b>　<img src="http://i.imgur.com/gCof63R.gif"/></center>
+<br><br>
+how do i dress usually ? do i follow styles ?<br>
+since i was free to choose my clothes, i always tried to wear something otome kei, because it was my favorite accessible style, but at the end of the day i was just wearing oversized shirts and sweaters with skirts / shorts and high socks ;///;<br>
+( + bell choker + tiny bows at my hair )<br>
+pretty much boring, but i wasn't very good with fashion until my 16 at least. i did a lot of research to find a style that really fits me !<br>
+<br>
+at the moment, i take inspirations from :<br>
+<br>
+✄ <b>larme kei</b> ( lots of handmade clothes, but i love rose marie seoir and axes femme )<br>
+✄ <b>mori girl</b> ( on fall and winter i do wear it a loooooot, so cozy and comfy, lots of handmade clothes too )<br>
+✄ <b>cult party</b> ( i have a few coords that I LOVE but i don't wear it a lot, the fabric is just so delicate ; ; )<br>
+✄ <b>lolita</b> ( i don't have any coord yet so it's basically à la mode. my dream is to wear classical-sweet, it's hard to wear on non-special occasions, but i think i can adapt to casual. i'm studying this style for YEARS i love it )<br>
+✄ <b>himekaji</b> ( basicaly because of liz lisa, cliché, i know )<br>
+<br>
+✁ & in everyday situations i'm inspired by that soft and clean aesthetic clothes ( not very creative but it's cute ) ✃<br>
+<br>
+so, i know lolita since i was 13 and i study lolita since i was 16. but why i don't use it YET ?<br>
+i sincerely think that at this point i know how to coordinate, i don't think lolita is too hard, it just have many rules and you need a lot of study, help and research. as i said, i have been studying for many years, so i think i'm okay with lolita to make a good first outfit now.<br>
+um, i don't have many items that i can use with lolita right now, and i also know that i don't need lots of money to buy good lolita clothes. i have no problem with handmade and non-brand outfits, because i know it's very possible to have a super cute and high quality lolita outfit, full handmade. as you may know, i love handmade outfits and most of my clothes are handmade.<br>
+but about lolita, specificly .. i know it's dumb, but i have a big wish :<br>
+i need a full angelic pretty outfit.<br>
+and that's not because i'm insecure about non-brand clothes, i just love angelic pretty too much and i need my first outfit to be super special for me. i don't care if it's expensive or anything, i just think it would be perfect to have a classical-sweet outfit, super high quality and from my favorite brand.<br>
+because it's expensive, i'm waiting for money. it can be silly, but it's really really special to me to have my first outfit from angelic pretty.<br>
+also, i really want outfits from innocent world and baby, i really love those brands and i will feel complete when i start with lolita supporting them.<br>
+after that, i'll probably coordinate brand clothes with handmade clothes, i think i can do that, and i think it will be magical ! i can't wait ...<br>
+<br>
+i hope it was a fun to read !!<br>
+fashion is a big interest of mine.<br>
+<br>
+<br>
+xoxo <img src="https://i.imgur.com/PmuzPpi.gif"/><br>
+<br><br>
+</font></font></font>
+<br>
+
+<body>
+<div style="float: right;">
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/lMakBs6.gif"/>&nbsp;&nbsp; { &nbsp;1002&nbsp; } &nbsp;
+</div>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<img width="20px" height="auto" src="https://i.imgur.com/Ky2Z5py.gif"/>&nbsp;&nbsp;{ &nbsp;1&nbsp; } &nbsp;
+</div>
+</font></font>
+</div>
+</body>
+<br><br><br><br><br><br><br>
+
+<center><img src="https://i.imgur.com/F97pcLP.gif"/></center>
+
+<br><br><br>
+
+<br>
 <center><img src="https://i.imgur.com/rYSdqAs.gif"/></center>
 <br><br>
 <font size = 1><font color="#CBBBB1">
