--- a/faq.html
+++ b/faq.html
@@ -1292,7 +1292,7 @@ but i decided that i'll post, since these are information that anyone who knows 
 ✂　i don't want to share measurements here, but i really like my body shape ! according to my measures, i'm hourglass figure.<br>
 ✂　my skin is pale, but not super pale. i hate tanning because my skin is really sensitive and turns red only ; ;<br>
 ✂　my hair changes color very much according to the lighting, but it also becomes clearer if i go out in the sun. it's dark blond / light brown and sometimes it gets a little bit orange, but it's only noticeable in the sunlight.<br>
-✂　i like to keep a himecut cut in my hair, with short side fringe. i prefer side fringe because it's cute but also a bit more mature. i cut my hair myself. i'm lazy to cut so it's common for the cut to go away and my fringe to be super long + my hair is quite curly, so the cut is not so noticeable.<br>
+✂　i like to keep a "himecut" in my hair, with short side bangs ( it's cute but also a bit more mature than straight bangs ). i cut my hair myself. i'm lazy so it's common for my bangs to be super long + my hair is quite wavy, so the cut is not so noticeable.<br>
 ✂　my eyes are between blue and green ( cyan, turquoise ) + a little bit grayish.<br>
 ✂　i don't know my shoe size to be honest, but my feet are 24cm.<br>
 ✂　um... i'm a-cup ;////;<br>
