--- a/gaming.html
+++ b/gaming.html
@@ -1027,7 +1027,8 @@ f i n a l　f a n t a s y　xiv
 <div class="tooltip">
 <div style ="width: 380px; height: 286px; overflow: auto; overflow-x: hidden; text-align: justify;">
 <div style ="width: 370; height: auto; overflow-y: hidden; overflow-x: hidden; text-align: justify;">
-um i don't have much to say so far because this is new to me, but i'm completely in love !!!
+um i don't have much to say so far because this is new to me, but although i didn't play very seriously and didn't have a lot of experience, i was really interested in a game that i could have cute characters and have some fun. i had help from some friends to get money and not get completely lost, since this game is complex and i don't have time to play much these days.<br>
+lalafell is definitely my favorite race, they are super cute and i am completely in love !!!
 </div>
 <br><br><center>
 <img width="170" height="auto" src="https://i.imgur.com/GEnv6pe.png"/> <img width="170" height="auto" src="https://i.imgur.com/dOQAkEe.gif"/><br><br>
@@ -1039,6 +1040,29 @@ um i don't have much to say so far because this is new to me, but i'm completely
 <img width="300" height="auto" src="https://i.imgur.com/S61fAoW.gif"/><br><br>
 <img width="170" height="auto" src="https://i.imgur.com/Zu0nutU.gif"/> <img width="170" height="auto" src="https://i.imgur.com/oQYXi8q.gif"/><br><br>
 <img width="300" height="auto" src="https://i.imgur.com/cOIMr2o.png"/>
+</center>
+<br><br><br>
+<div style ="width: 370; height: auto; overflow-y: hidden; overflow-x: hidden; text-align: justify;">
+just like above, i started to play a bit of tera online with the same intention. i'm also not playing very seriously and often, so i don't have so much to say either.<br>
+( elins are the best race and i love them ♡ ♡ ♡ )
+</div>
+<br><br>
+<center>
+<img width="300" height="auto" src="https://i.imgur.com/bnXNdUx.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/wXxy7BC.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/UHrGZXC.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/E0EzldD.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/zRna4w8.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/cjmbR9p.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/0K6JHLQ.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/DBeJnHL.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/REqC7ef.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/gROuFmt.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/dMYxLxP.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/2T9E8xJ.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/qnx2ifI.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/TxrMGmN.gif"/><br><br>
+<img src="https://i.imgur.com/pAsN9WU.png"/>
 </center>
 <br><br>
 </div>
@@ -1265,6 +1289,11 @@ mobile games i recommend
 well, i like to test random mobile games and sometimes i find very nice stuff ! these are for android, but i think you can find some of them on ios too.
 </div>
 <br><br><center>
+<img width="170" height="auto" src="https://i.imgur.com/3zzNy62.png"/> <img width="170" height="auto" src="https://i.imgur.com/MH7P7qf.png"/><br><br>
+<img width="170" height="auto" src="https://i.imgur.com/QY8GRGo.png"/> <img width="170" height="auto" src="https://i.imgur.com/MPrPPlb.png"/><br><br>
+<img width="170" height="auto" src="https://i.imgur.com/xhoAi2u.png"/> <img width="170" height="auto" src="https://i.imgur.com/XRsbim9.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/q8U9fev.png"/><br><br>
+<img width="300" height="auto" src="https://i.imgur.com/cydayxP.png"/><br><br>
 <img width="170" height="auto" src="https://i.imgur.com/3r0icQC.png"/> <img width="170" height="auto" src="https://i.imgur.com/rxtulPG.png"/><br><br>
 <img width="170" height="auto" src="https://i.imgur.com/1g24joL.png"/> <img width="170" height="auto" src="https://i.imgur.com/xBxsCuS.png"/><br><br>
 <img width="300" height="auto" src="https://i.imgur.com/EAKWo5B.png"/><br><br>
