--- a/gaming.html
+++ b/gaming.html
@@ -1061,8 +1061,7 @@ just like above, i started to play a bit of tera online with the same intention.
 <img width="300" height="auto" src="https://i.imgur.com/dMYxLxP.png"/><br><br>
 <img width="300" height="auto" src="https://i.imgur.com/2T9E8xJ.png"/><br><br>
 <img width="300" height="auto" src="https://i.imgur.com/qnx2ifI.png"/><br><br>
-<img width="300" height="auto" src="https://i.imgur.com/TxrMGmN.gif"/><br><br>
-<img src="https://i.imgur.com/pAsN9WU.png"/>
+<img width="300" height="auto" src="https://i.imgur.com/TxrMGmN.gif"/>
 </center>
 <br><br>
 </div>
