--- a/index.html
+++ b/index.html
@@ -344,6 +344,7 @@ position: relative;
 <br><br><center><div id="update" style="background-image:url(https://i.imgur.com/HgFke6Y.png); border: 1px; padding: 10px; overflow: auto; color: #BC9F9F; width: 172px;height: 100px; text-align: justify; font-family: Verdana; font-size:7px; line-height: 100%">
 <center><img src="https://i.imgur.com/bwAaPW7.gif"></center>
 <br><br>
+05/09 <img src="https://i.imgur.com/y9S1bJ8.gif"> stuff on: <font color="#DFB7B7">gaming page</font><br>
 05/04 <img src="https://i.imgur.com/y9S1bJ8.gif"> status on: <font color="#DFB7B7">status page</font><br>
 05/04 <img src="https://i.imgur.com/y9S1bJ8.gif"> post on: <font color="#DFB7B7">news blog</font><br>
 04/29 <img src="https://i.imgur.com/y9S1bJ8.gif"> playlist on: <font color="#DFB7B7">potetomid</font><br>
@@ -351,7 +352,6 @@ position: relative;
 04/21 <img src="https://i.imgur.com/y9S1bJ8.gif"> tips on: <font color="#DFB7B7">help page</font><br>
 04/21 <img src="https://i.imgur.com/y9S1bJ8.gif"> asmr playlist on: <font color="#DFB7B7">potetomid</font><br>
 04/19 <img src="https://i.imgur.com/y9S1bJ8.gif"> post on: <font color="#DFB7B7">news blog</font><br>
-04/19 <img src="https://i.imgur.com/y9S1bJ8.gif"> status on: <font color="#DFB7B7">status page</font><br>
 </div></center>
 
 <br>
@@ -364,7 +364,7 @@ position: relative;
     border-radius: 20px; outline:none; padding:2px; padding-left:3px; padding-right:3px; background-image:url(https://i.imgur.com/4pQ4HlC.png); font-size:8px; font-family:Verdana; COLOR: #a58282"><a href="http://middlepot.com/"><img src="https://i.imgur.com/SS3uOVJ.png"></a></textarea>
 <br><br><br>
 
-<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#9e8787"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#9e8787"> 2018 . may . 04</font></font></font>
+<font family = "Verdana"><font style="font-size:8px;"><font color="#cea9a9">since</font><font color="#c18f8f"> *</font><font color="#9e8787"> 2017 . august . 16</font><br><font color="#cea9a9">last update</font><font color="#c18f8f"> *</font><font color="#9e8787"> 2018 . may . 09</font></font></font>
 <br>
 <br><br>
 <br><br>
