--- a/status.html
+++ b/status.html
@@ -396,7 +396,26 @@ p { margin: 0; }
 
 
 <!-- STAAAAAAAAAAAAAAAAAAAAATUSSSSSSSSSSSSSSSSSSSSSSSSSS -->
+<div style="text-align: left;"><br><br>
+　<img src="http://i.imgur.com/lOSrsvD.gif"> <font color="#624646">05.10.18</font>
+<body>
+<div style="float: right;">
+<style>
+yay { cursor: pointer; }
+</style>
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_s2941852109077_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090277_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1cR5Rrd6mwvMN-PqeZUxX6N-EdI2aIyhw"></script>
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_s2941852109277_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092377_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1QwrMAI2zQZgXLYX_-E5l56JFvM0L0CHt"></script>
+</font></font>
+</div>
+</body>
 
+<br><br>
+　　<font color="#815B5B">*.。ଘ(੭*´˘`)੭* ̀ˋ be kind to yourself</font>
+<br><br>
 <div style="text-align: left;"><br><br>
 　<img src="http://i.imgur.com/lOSrsvD.gif"> <font color="#624646">05.04.18</font>
 <body>
@@ -576,26 +595,6 @@ yay { cursor: pointer; }
 
 <br><br>
 　　<font color="#815B5B">kissy kissy makes me happy, honey, honey, sweet as candy</font>
-<br><br><br>
-<div style="text-align: left;"><br><br>
-　<img src="http://i.imgur.com/lOSrsvD.gif"> <font color="#624646">01.25.18</font>
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109077_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090277_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1cR5Rrd6mwvMN-PqeZUxX6N-EdI2aIyhw"></script>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109277_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092377_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1QwrMAI2zQZgXLYX_-E5l56JFvM0L0CHt"></script>
-</font></font>
-</div>
-</body>
-
-<br><br>
-　　<font color="#815B5B">our dreams will surely come true if we believe in them !!</font>
 <br><br>
 <!-- STAAAAAAAAAAAAAAAAAAAAATUSSSSSSSSSSSSSSSSSSSSSSSSSS -->
 
