--- a/status.html
+++ b/status.html
@@ -347,7 +347,7 @@ position: relative;
 <center><img src="http://i.imgur.com/Bm18E8o.gif"></center><br>
 <center><font color="#B49797">{ status }</font></center>
 <br>
-<center><font color="#A07777">feeling: </font><font color="#E67474">happy </font><img src="https://i.imgur.com/kWGVXSA.gif"></center>
+<center><font color="#A07777">feeling: </font><font color="#E67474">positive </font><img src="https://i.imgur.com/8aDpBg7.gif"></center>
 <br><br>
 <center><img src="http://i.imgur.com/kN7ZWlR.png"><center><br><br><br><style>
 p { margin: 0; }
@@ -396,6 +396,26 @@ p { margin: 0; }
 
 
 <!-- STAAAAAAAAAAAAAAAAAAAAATUSSSSSSSSSSSSSSSSSSSSSSSSSS -->
+<div style="text-align: left;"><br><br>
+　<img src="http://i.imgur.com/lOSrsvD.gif"> <font color="#624646">05.17.18</font>
+<body>
+<div style="float: right;">
+<style>
+yay { cursor: pointer; }
+</style>
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_s2941852109088_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090288_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1HXhl4sWIHSxx_5UeD9GwjaqD6SFYv71T"></script>
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_s2941852109288_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092388_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1-QQqpe0X7INRXEXfAF5t_jtFLuv7Bzs2"></script>
+</font></font>
+</div>
+</body>
+
+<br><br>
+　　<font color="#815B5B">we can improve every day !</font>
+<br><br>
 <div style="text-align: left;"><br><br>
 　<img src="http://i.imgur.com/lOSrsvD.gif"> <font color="#624646">05.10.18</font>
 <body>
@@ -575,26 +595,6 @@ yay { cursor: pointer; }
 
 <br><br>
 　　<font color="#815B5B">i want to be the best i can be !!</font>
-<br><br><br>
-<div style="text-align: left;"><br><br>
-　<img src="http://i.imgur.com/lOSrsvD.gif"> <font color="#624646">02.15.18</font>
-<body>
-<div style="float: right;">
-<style>
-yay { cursor: pointer; }
-</style>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109088_"><img width="14px" height="14px" src="https://i.imgur.com/FxGzPfn.gif"/></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_s29418521090288_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1HXhl4sWIHSxx_5UeD9GwjaqD6SFYv71T"></script>
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_s2941852109288_"><img width="15px" height="15px" src="https://i.imgur.com/rV3oT1f.gif"/></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_s29418521092388_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1-QQqpe0X7INRXEXfAF5t_jtFLuv7Bzs2"></script>
-</font></font>
-</div>
-</body>
-
-<br><br>
-　　<font color="#815B5B">kissy kissy makes me happy, honey, honey, sweet as candy</font>
 <br><br>
 <!-- STAAAAAAAAAAAAAAAAAAAAATUSSSSSSSSSSSSSSSSSSSSSSSSSS -->
 
