--- a/look-book.html
+++ b/look-book.html
@@ -419,6 +419,32 @@ p { margin: 0; }
 <center>
 
 <br><br>
+<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 05.16.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
+<img width="220px" height="auto" src="https://i.imgur.com/zgCG3hj.png"/><br>
+<br><br>
+
+
+<center>
+<body>
+<style>
+yay { cursor: pointer; }
+</style>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_li2941852109033_"><sub><sub><img width="16px" height="auto" src="https://i.imgur.com/ecgki0o.gif"/></sub></sub></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_li29418521090233_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1IkpQeePOQVh9Dm1Lb-CRnadkPT4x6TYy"></script>
+</div>
+<div style="font-family: Verdana; font-size: 8px;">
+<font family = "Tahoma"><font color="#997C7C">
+<yay><a id="_li2941852109233_"><sub><sub><img width="16px" height="auto" src="https://i.imgur.com/tymmGmT.gif"/></sub></sub></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_li29418521092333_"></span>&nbsp; } &nbsp;</p>
+<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1IlZKHTzox9DED0JQZLb9c4NOId187W4c"></script>
+</div>
+</font></font>
+</body>
+</center>
+
+
+<br><br><br><br><br>
 <font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 04.19.18 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
 <img width="220px" height="auto" src="https://i.imgur.com/OGp5npr.png"/><br>
 <br><br>
@@ -661,31 +687,6 @@ yay { cursor: pointer; }
 </center>
 
 
-<br><br><br><br><br>
-<font color="#877b71"><sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub> 11.16.17 <sub><img width="15" height="auto" src="https://i.imgur.com/p9P96Ms.gif"/></sub></font><br><br>
-<img width="220px" height="auto" src="https://i.imgur.com/38qVGrk.png"/><br>
-<br><br>
-
-
-
-<center>
-<body>
-<style>
-yay { cursor: pointer; }
-</style>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_li2941852109033_"><sub><sub><img width="16px" height="auto" src="https://i.imgur.com/ecgki0o.gif"/></sub></sub></a></yay>&nbsp;&nbsp; { &nbsp;<span id="_li29418521090233_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1IkpQeePOQVh9Dm1Lb-CRnadkPT4x6TYy"></script>
-</div>
-<div style="font-family: Verdana; font-size: 8px;">
-<font family = "Tahoma"><font color="#997C7C">
-<yay><a id="_li2941852109233_"><sub><sub><img width="16px" height="auto" src="https://i.imgur.com/tymmGmT.gif"/></sub></sub></a></yay>&nbsp;&nbsp;{ &nbsp;<span id="_li29418521092333_"></span>&nbsp; } &nbsp;</p>
-<script type="text/javascript" src="https://drive.google.com/uc?export=download&id=1IlZKHTzox9DED0JQZLb9c4NOId187W4c"></script>
-</div>
-</font></font>
-</body>
-</center>
 
 
 <br><br><br><br><br>
